# crates/http-server/src/handlers/users/mod.rs
@@ -1,15 +1,9 @@
-use axum::{
-    Router,
-    routing::{get, post},
-};
+use axum::{Router, routing};
 
 use crate::extractors::state::AppState;
 
 mod me;
-mod sign_in;
 
 pub fn routes() -> Router<AppState> {
-    Router::new()
-        .route("/users/me", get(me::handler))
-        .route("/users/sign-in", post(sign_in::handler))
+    Router::new().route("/users/me", routing::get(me::handler))
 }
